<resources>
    <string name="yl_user_module_name">user module</string>
    <string name="yl_user_account_hint">email or mobile number</string>
    <string name="yl_user_account_password">password</string>
    <string name="yl_user_account_confirm_password">confirm password</string>
    <string name="yl_user_verification_code">verification code</string>
    <string name="yl_user_get_verification_code">get code</string>
    <string name="yl_user_register">register</string>
    <string name="yl_user_login">login</string>
    <string name="yl_user_forget_password">forget password?</string>
    <string name="yl_user_no_account">no account?</string>
    <string name="yl_user_remember_me">remember me</string>
    <string name="yl_user_remember_pass">remember password</string>
    <string name="yl_user_register_or_login">signup/login</string>
    <string name="yl_user_account_is_empty">account is empty</string>
    <string name="yl_user_account_format_error">account format error</string>
    <string name="yl_user_password_is_empty">password is empty</string>
    <string name="yl_user_account_not_exist">account not exist, please signup first</string>
    <string name="yl_user_logout_confirm">Are you sure logout?</string>
    <string name="yl_user_login_first">login first</string>
    <string name="yl_user_already_logged">already logged</string>
    <string name="yl_user_password_is_different">password is different</string>
    <string name="yl_user_verification_code_is_empty">verification code is empty</string>
    <string name="yl_user_user_exist">user exist</string>
    <string name="yl_user_register_success">signup success</string>
    <string name="yl_user_about_app">about application</string>
    <string name="yl_user_detecting_new_version">Checking for new version</string>
    <string name="yl_user_no_new_version">No new version detected</string>
    <string name="yl_user_updateing">updating...</string>
    <string name="yl_user_new_version_can_be_update">Found new version can be updated!</string>
    <string name="yl_user_phone_region_code">phone number region code</string>
    <string name="yl_user_pin_login">Verification code login</string>
    <string name="yl_user_get_code_count">get again in %1$d seconds</string>
    <string name="yl_user_logining">Logging in</string>
</resources>
