<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yl_common_color_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.evertrend.tiger.common.widget.SeniorEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/yl_user_account_hint"
            app:yl_common_clearDrawable="@drawable/ic_content_clear"
            app:yl_common_editFrameStyle="roundRect"
            app:yl_common_editFrameColor="@color/yl_common_color_white_gray"/>

        <com.evertrend.tiger.common.widget.SeniorEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_account"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/yl_user_account_password"
            app:yl_common_clearDrawable="@drawable/ic_content_clear"
            app:yl_common_visibleDrawable="@drawable/ic_content_visible"
            app:yl_common_invisibleDrawable="@drawable/ic_content_invisible"
            app:yl_common_editFrameStyle="roundRect"
            app:yl_common_editFrameColor="@color/yl_common_color_white_gray"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginStart="10dp"
            android:checked="true"
            android:text="@string/yl_user_remember_me"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cb_remember_me"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:layout_marginStart="10dp"
            android:text="@string/yl_user_remember_pass"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_remember_me"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/yl_common_btn_bg_round_click"
            android:textColor="@drawable/yl_common_btn_click_text_color"
            android:gravity="center"
            android:text="@string/yl_user_login"/>

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/yl_user_no_account"
            android:textColor="@android:color/holo_green_dark"/>

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/yl_user_forget_password"
            android:textColor="@android:color/holo_green_dark"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/yl_common_company_information"/>

</androidx.constraintlayout.widget.ConstraintLayout>